<resources>
    <string name="app_name">InnoQodeTest</string>
    <string name="text_email">Email</string>
    <string name="hint_email">Enter your email</string>
    <string name="text_password">Password</string>
    <string name="text_log_in">Log In</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="text_dont_have_acc">Don\'t have any account? Sign up here.</string>
    <string name="hint_password">Enter your password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign up</string>
    <string name="text_first_name">First Name</string>
    <string name="hint_enter_first_name">Enter Your First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="hint_enter_last_name">Enter Your Last Name</string>
    <string name="hint_enter_your_email">"Enter your email "</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="err_email">Please Provide a valid email</string>
    <string name="err_password">Password can not be less than 6 charcter</string>
    <string name="confirm">Confirm</string>
    <string name="cancle">Cancle</string>
    <string name="err_something_went_wrong">Something went wrong</string>
    <string name="err_name">Please Provide Valid Name</string>
    <string name="text_innoqode_test">InnoQode Test</string>
    <string name="demo_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="demo_date">12 Jan, 2021</string>
    <string name="demo_text_2">Lorem Ipsum is simply dummy</string>
</resources>