<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="-15dp"
    app:cardBackgroundColor="#fff"
    app:cardCornerRadius="15dp"
    android:clickable="true"
    android:layout_gravity="bottom"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#fff"
            android:elevation="0dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="18dp"
            app:title="@string/sign_up">

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="?actionBarItemBackground"
                android:gravity="center"
                android:paddingLeft="25dp"
                android:paddingRight="20dp"
                android:src="@drawable/ic_baseline_close_24"
                android:textColor="#000"
                android:textSize="16sp"
                app:tint="#0D1C2E" />

        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/pbSignupLoading"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:indeterminate="true"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_first_name"
            android:textColor="@color/grey_text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="18dp"
            android:hint="@string/hint_enter_first_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="14dp"
            android:textColorHint="@color/grey_hint"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/text_last_name"
            android:textColor="@color/grey_text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="18dp"
            android:hint="@string/hint_enter_last_name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingStart="14dp"
            android:textColorHint="@color/grey_hint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/text_email"
            android:textColor="@color/grey_text"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg"
            android:drawablePadding="18dp"
            android:hint="@string/hint_enter_your_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="14dp"
            android:textColorHint="@color/grey_hint"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="12dp"
            android:text="@string/text_password"
            android:textColor="@color/grey_text"
            android:textSize="14sp" />


        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/input_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number">

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawablePadding="18dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:paddingStart="14dp"
                android:paddingEnd="12dp"
                android:textColorHint="@color/grey_hint"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivShowPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingRight="10dp"
                app:srcCompat="@drawable/ic_visibility" />

        </RelativeLayout>


        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/text_sign_up"
            android:textStyle="bold"
            android:textSize="16sp"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            app:backgroundTint="@color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>