<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="66dp"
                android:src="@drawable/ic_innoqode"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:text="@string/text_email"
                android:textColor="@color/grey_text"
                android:textSize="14sp" />


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                android:drawablePadding="18dp"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingStart="14dp"
                android:textColorHint="@color/grey_hint"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:text="@string/text_password"
                android:textColor="@color/grey_text"
                android:textSize="14sp" />


            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phone_number">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawablePadding="18dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:paddingStart="14dp"
                    android:paddingEnd="12dp"
                    android:textColorHint="@color/grey_hint"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ivShowPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingRight="10dp"
                    app:srcCompat="@drawable/ic_visibility" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16.25dp"
                android:layout_marginEnd="20dp"
                android:orientation="horizontal">


            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="20dp"
                android:text="@string/text_log_in"
                android:textStyle="bold"
                android:textSize="16sp"
                android:stateListAnimator="@null"
                android:textAllCaps="false"
                app:backgroundTint="@color/black" />

            <TextView
                android:id="@+id/tvSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="23dp"
                android:layout_marginBottom="20dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:padding="10dp"
                android:text="@string/text_dont_have_acc"
                android:textColor="@color/grey_text"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</layout>