<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginTop="12dp"
    app:cardElevation="2dp"
    app:cardCornerRadius="4dp"
    app:cardBackgroundColor="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/ivPostBanner"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:background="@color/grey_light"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvPostTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_skeleton"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/grey_light"
                android:textSize="13sp"
                android:text="@string/demo_text"/>


            <TextView
                android:id="@+id/tvPostTitle3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_skeleton"
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginTop="6dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:textColor="@color/grey_light"
                android:textSize="13sp"
                android:text="@string/demo_text_2"/>

            <TextView
                android:id="@+id/tvPostDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="3"
                android:ellipsize="end"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/bg_skeleton"
                android:textColor="@color/grey_light"
                android:textSize="8sp"
                android:text="@string/demo_date"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>